@@ -17,6 +17,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23552: Timeit now warns when there is substantial (4x) variance
+  between best and worst times. Patch from Serhiy Storchaka.
+
 - Issue #24633: site-packages/README -> README.txt.
 
 - Issue #24879:  help() and pydoc can now list named tuple fields in the
